# CS205_project_2020S

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  project-matrix.md
.github/workflows/: compile.yaml  unix_with_opencv.yaml  windows_no_opencv.yaml
cmake/: cross_platform.cmake  package_opencv.cmake  windows_OpenCV.cmake
include/: .gitattributes  CMakeLists.txt  catch_main.hpp
material/: project-matrix.md
src/: CMakeLists.txt  Matrix.hpp  cpp20.cpp  opencv_matrix.cpp  template_helper.h  template_helper.hpp  test_matrix_1.cpp  test_matrix_2.cpp
